--- a/stylesheet.css
+++ b/stylesheet.css
@@ -30,9 +30,10 @@ h5			{font-size:2em;}
 h4			{font-size:1.8em;}
 h3 			{font-size:1.7em;}
 h2 			{font-size:1.7em;}
-h1			{font-size:1.4em;}
-p, p.b,  			{font-size:1.2em;}
-ul, ol 			{font-size:1.2em;}				
+h1			{font-size:1.6em;}
+p, p.b,  			{font-size:1.5em;}
+ul, ol 			{font-size:1.5em;}				
+span			{font-size:1.5em;}
 
 p, ul, ol {font-family: "angsana";}
 
