--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,7 +23,7 @@ p, h2, ul, ol {font-weight: 500;}
 	
 h1,  h3, h4, h5, h6  		{color:#353535}
 p, ul, h2, ol, div.i		{color:#424242}
-
+p5			{color:#992500}
 
 
 h5			{font-size:2em;}
